# prabuj1611.github.io

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.html  about.qmd  certifications.html  certifications.qmd  index.html  index.qmd  projects.html  projects.qmd  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  styles.css
_site/: about.html  index.html  search.json  styles.css
