[project]
name = "prabuj1611-github-io"
version = "0.0.1"
description = "Initial website for Prabu Jeyabalan GitHub"
authors = [
    {name = "prabuj1611",email = "prabuj1611@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.1"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "plotly (>=5.24.1,<6.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[tool.poetry]
packages = [{include = "prabuj1611"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
